# buildship

./: .env.example  .gitignore  CLAUDE.md  ENGINEER_A.md  ENGINEER_B.md  FINDINGS.md  IDEAS.md  Makefile  PRD.md  README.md  TIMELINE.md  buildship-product-plan.md  demo_chain.py  demo_trace.py  forge-product-plan.md  main.py  model_list.py  private.pem  public.pem  pyproject.toml  requirements.txt  run_experiments.sh  smoke_hero.py  stages.md
agent/: README.md  config.py  core.py  harness.py  interview.py  listings.py  loop.py  researcher.py  seed.py  server.py  tools.py
agent/clients/: composio_client.py  mem0_client.py  nebius.py  tavily_client.py
app/: README.md  index.html  package-lock.json  package.json  vite.config.js
assets/: README.md
buildship/: adapters.py  buildship_core.py
demo_traces/: reuse.json  self_debug.json
design/: 00-overview.md  01-mem0-and-profiles.md  02-style-spec-generator.md  03-listings-tavily.md  04-agent-loop.md  05-app.md  06-deck-and-demo.md  07-agent-harness.md  08-flow-optimizations.md  08b-getting-to-know-you.md  09-interview-engine-and-voice.md  10-home-discovery.md  10b-discovery-integration.md  11-area-research-provenance.md
pipeline/: README.md
scripts/: pull_assets.py  push_assets.py
specs/: README.md  jake_v1.json  pablo_v1.json  schema.json
tests/: conftest.py  test_ablation.py  test_adapter_helpers.py  test_agent_core.py  test_catchall_and_spec.py  test_clients.py  test_core_loop.py  test_demo_trace.py  test_eval_tasks.py  test_interview.py  test_parity.py  test_routes.py
web/: README.md  app.js  index.html
(+36 files in other folders)
