[project]
name = "buildship"
version = "0.1.0"
description = "An agent that writes its own tools — a state-externalizing harness for self-extending capabilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "composio>=0.13.1",
    "matplotlib>=3.10.9",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
]

[[tool.uv.index]]
url = "https://pypi.apple.com/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
